# carapi

./: Dockerfile  README.md  docker-compose.yml  lint.sh  pyproject.toml  pytest.ini  settings.json  settings_all_fuel.json  settings_german.json  settings_hybrid.json  settings_new.json  settings_no_suv.json  settings_reliable.json  settings_subset_all_fuel.json  settings_suv.json  test.sh  update_make_models.sh
.github/: copilot-instructions.md
.github/workflows/: carapi_ci.yml  run_carapi.yml
dashboard/: app.py
dashboard/static/: main.js  style.css
dashboard/templates/: index.html
data/: makes_and_models.csv
data/results/: filtered_cars_age.csv
src/: auto_score.py  config.py  constants.py  exporter.py  fetch_makes_and_models.py  main.py  notifier.py  scraper.py  start.py  table_utils.py
tests/: autoscout_sample.html  autoscout_sample_single_car.html  conftest.py  test_autoscore.py  test_config.py  test_dashboard_api.py  test_exporter.py  test_fetch_makes_and_models.py  test_integration.py  test_main.py  test_notifier.py  test_save_best_cars.py  test_scraper.py  test_table_utils.py  update_html.py
