[tool.poetry]
name = "carapi"
version = "0.1.0"
description = "scraper to filter out used car results and notify the user"
authors = ["Federico Puppo <info@federicopuppo.com>"]
license = "GNU General Public License (GPL)"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
beautifulsoup4 = "^4.13.3"
requests = "^2.26.0"
pandas-stubs = "^2.2.3.250308"
types-requests = "^2.32.0.20250306"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pylint = "^3.3.5"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
